--- a/create-azure-vars/action.yml
+++ b/create-azure-vars/action.yml
@@ -25,7 +25,7 @@ runs:
     - name: Azure Login
       uses: Azure/login@v1.1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        creds: ${{ inputs.AZURE_CREDENTIALS }}
         enable-AzPSSession: false
     - run: |
         echo "aksName=$(az resource list --resource-group ${{ inputs.rg }} --resource-type Microsoft.ContainerService/managedClusters --query [].name -otsv)" >> $GITHUB_ENV
